<resources>
    <string name="code_x">Code-X</string>
    <string name="app_name">Codex</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_libs">Libs</string>
    <string name="menu_updates">Tips</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="review">Review</string>
    <string name="contact">Contact</string>
    <string name="_1_0_0">version: 1.0.0</string>
    <string name="search">Search</string>
    <string name="ellipsis">&#8230;</string>
    <string name="ADMOB_APP_ID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Codex">codex_activity</string>
    <string name="Tracker">tracker</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="distance">DISTANCE</string>
    <string name="calories">CALORIES</string>
    <string name="avgspeed">AVGSPEED</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="your_name">Your Name</string>
    <string name="your_weight">Your Weight</string>
    <string name="total_distance">Total Distance</string>
    <string name="_0km">0km</string>
    <string name="total_time">Total Time</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="_0kcal">0kcal</string>
    <string name="average_speed">Average Speed</string>
    <string name="_0km_h">0km/h</string>
    <string name="sort_by">Sort by:</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDD7wzRHOxhWqPNsjZ08ZrchCjKHknb1-s</string>
    <string name="your_runs">Your Runs</string>
    <string name="settings">Settings</string>
    <string name="analytics">Analytics</string>
    <string name="cancel_tracking">Cancel Tracking</string>
    <string name="cancel_run">Cancel Run</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="Summary">Summary</string>
    <string name="steps">Steps</string>
    <string name="your_weight_in_kgs">Your Weight in Kgs</string>
</resources>