<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item android:id="@+id/runFragment"
            android:title="@string/your_runs"
            android:icon="@drawable/round_run_circle_cyan_500_24dp" />

        <item android:id="@+id/statisticsFragment"
            android:title="@string/analytics"
            android:icon="@drawable/round_analytics_cyan_500_24dp" />

        <item android:id="@+id/settingsFragment"
            android:title="@string/settings"
            android:icon="@drawable/round_settings_cyan_500_24dp" />
    </group>

    <group
        android:id="@+id/nav_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/theme"
            android:icon="@drawable/round_dark_mode_teal_500_24dp"
            android:title="@string/theme" />
        <item
            android:id="@+id/github"
            android:icon="@drawable/round_info_teal_500_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/round_share_teal_500_24dp"
            android:title="@string/share" />
        <item
            android:id="@+id/review"
            android:icon="@drawable/round_rate_review_teal_500_24dp"
            android:title="@string/review" />

        <item
            android:id="@+id/contact"
            android:icon="@drawable/round_contact_page_teal_500_24dp"
            android:title="@string/contact" />

    </group>

</menu>