<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/round_home_teal_500_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_libraries"
            android:icon="@drawable/round_api_teal_500_24dp"
            android:title="@string/menu_libs" />
        <item
            android:id="@+id/nav_updates"
            android:icon="@drawable/round_tips_and_updates_teal_500_24dp"
            android:title="@string/menu_updates" />
    </group>

    <group
        android:id="@+id/nav_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/theme"
            android:icon="@drawable/round_dark_mode_teal_500_24dp"
            android:title="@string/theme" />
        <item
            android:id="@+id/github"
            android:icon="@drawable/round_info_teal_500_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/round_share_teal_500_24dp"
            android:title="@string/share" />
        <item
            android:id="@+id/review"
            android:icon="@drawable/round_rate_review_teal_500_24dp"
            android:title="@string/review" />

        <item
            android:id="@+id/contact"
            android:icon="@drawable/round_contact_page_teal_500_24dp"
            android:title="@string/contact" />

    </group>

</menu>