<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
    app:startDestination="@id/setupFragment">

    <action android:id="@+id/action_global_trackingFragment"
        app:destination="@id/trackingFragment"
        app:launchSingleTop="true"/>

    <fragment
        android:id="@+id/runFragment"
        android:name="com.android.codex.ui.fragments.RunFragment"
        android:label="@string/home" >
        <action
            android:id="@+id/action_runFragment_to_trackingFragment"
            app:destination="@id/trackingFragment" />
    </fragment>
    <fragment
        android:id="@+id/setupFragment"
        android:name="com.android.codex.ui.fragments.SetupFragment"
        android:label="@string/profile" >
        <action
            android:id="@+id/action_setupFragment_to_runFragment"
            app:destination="@id/runFragment" />
    </fragment>
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.android.codex.ui.fragments.StatisticsFragment"
        android:label="@string/Summary" />
    <fragment
        android:id="@+id/trackingFragment"
        android:name="com.android.codex.ui.fragments.TrackingFragment"
        android:label="@string/steps" >
        <action
            android:id="@+id/action_trackingFragment_to_runFragment"
            app:destination="@id/runFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.android.codex.ui.fragments.SettingsFragment"
        android:label="@string/settings" />
</navigation>