<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.codex.ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_libraries"
        android:name="com.android.codex.ui.fragments.LibsFragment"
        android:label="@string/menu_libs"
        tools:layout="@layout/fragment_libs" />

    <fragment
        android:id="@+id/nav_updates"
        android:name="com.android.codex.ui.fragments.TipsFragment"
        android:label="@string/menu_updates"
        tools:layout="@layout/fragment_tips" />
</navigation>